--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -42,7 +42,7 @@
             </small>
         </div>
         <footer class="m-4 mt-5 text-center fixed-bottom">
-            <small>&copy Almynak 2019</small>
+            <small>&copy; Almynak 2019. All Rights Reserved.</small>
         </footer>
 </div>
 
@@ -50,6 +50,6 @@
 
 {% block javascript %}
 
-        <script type="text/javascript" src="{{ url_for('static', filename = 'login.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='login.js') }}"></script>
 
 {% endblock %}
