--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -53,7 +53,7 @@
             </form>
         </div>
         <footer class="m-4 mt-5 text-center fixed-bottom">
-            <small>&copy Almynak 2019</small>
+            <small>&copy; Almynak 2019. All Rights Reserved.</small>
         </footer>
 </div>
 
@@ -62,6 +62,5 @@
 
 {% block javascript %}
 
-        <script type="text/javascript" src="{{ url_for('static', filename = 'login.js') }}"></script>
 
 {% endblock %}
