fixed background-size auto to fill page, added account holder  menu, and upload  brand image form

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -3,9 +3,9 @@
 
             <div class="row">
                 <div id="img-about" class="col pl-0 position-relative text-white text-center align-text-top">
-                    <div class="p-4 position-fixed banner-img-about">
+                    <div class="p-4 position-fixed text-uppercase banner-about">
                         About us
-                        <hr class="banner_img_hr position-fixed border border-white mt-2">
+                        <hr class="banner_hr position-fixed border mt-2">
                     </div>
                     
                 </div>
@@ -19,8 +19,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col section-mission text-center pt-4">
-                            <p class="mission_p d-inline-block">
+                        <div class="col section-mission pt-4">
+                            <p class="mission_p text-justify d-inline-block">
                                 Id eam errem facilisis dissentias, cu vel nisl enim invenire. Fabulas democritum instructior vel ne. Duis voluptaria argumentum no sed, nec clita eruditi consulatu cu. Exerci cotidieque accommodare ea vis, id invenire suscipiantur ius. Ea iriure sensibus nec, pro iusto luptatum sadipscing no, simul clita interesset vix ea.
                             </p>
                         </div>
@@ -38,11 +38,13 @@
                                     <div id="1" class="board-member d-inline-block text-center p-5 mx-5">
                                         Jane Doe
                                         <br>
-                                        Co-Founder and CEO
+                                        <span class="board-member-roll">
+                                            Co-Founder and CEO
+                                        </span>
                                         <br>
                                         <img class="board-member-img p-2" src="/static/images/board_1.jpeg">
                                         <br>
-                                        <button type="button" class="btn btn-light py-0" data-toggle="modal" data-target="#exampleModal" data-name="Jane Doe" data-title="Co-Founder and CEO"> 
+                                        <button type="button" class="btn btn-light py-0 text-uppercase" data-toggle="modal" data-target="#exampleModal" data-name="Jane Doe" data-title="Co-Founder and CEO"> 
                                             <small> 
                                                 More
                                             </small>
@@ -53,11 +55,13 @@
                                     <div id="2" class="board-member d-inline-block text-center p-5 mx-5">
                                         Rebecca Good
                                         <br>
-                                        Co-Founder and CEO
+                                        <span class="board-member-roll">
+                                            Co-Founder and CEO
+                                        </span>
                                         <br>
                                         <img class="board-member-img p-2" src="/static/images/board_1.jpeg">
                                         <br>
-                                        <button type="button" class="btn btn-light py-0" data-toggle="modal" data-target="#exampleModal" data-name="Rebecca Good" data-title="Co-Founder and CEO"> 
+                                        <button type="button" class="btn btn-light py-0 text-uppercase" data-toggle="modal" data-target="#exampleModal" data-name="Rebecca Good" data-title="Co-Founder and CEO"> 
                                             <small> 
                                                 More
                                             </small>
@@ -68,11 +72,13 @@
                                     <div id="2" class="board-member d-inline-block text-center p-5 mx-5">
                                         John Michael
                                         <br>
-                                        COO
+                                        <span class="board-member-roll">
+                                            COO
+                                        </span>
                                         <br>
                                         <img class="board-member-img p-2" src="/static/images/board_1.jpeg">
                                         <br>
-                                        <button type="button" class="btn btn-light py-0" data-toggle="modal" data-target="#exampleModal" data-name="John Michael" data-title="COO"> 
+                                        <button type="button" class="btn btn-light py-0 text-uppercase" data-toggle="modal" data-target="#exampleModal" data-name="John Michael" data-title="COO"> 
                                             <small> 
                                                 More
                                             </small>
@@ -83,11 +89,13 @@
                                     <div id="2" class="board-member d-inline-block text-center p-5 mx-5">
                                         Shana Anthony
                                         <br>
-                                        CFO
+                                        <span class="board-member-roll">
+                                            CFO
+                                        </span>
                                         <br>
                                         <img class="board-member-img p-2" src="/static/images/board_1.jpeg">
                                         <br>
-                                        <button type="button" class="btn btn-light py-0" data-toggle="modal" data-target="#exampleModal" data-name="Shana Anthony" data-title="CFO">
+                                        <button type="button" class="btn btn-light py-0 text-uppercase" data-toggle="modal" data-target="#exampleModal" data-name="Shana Anthony" data-title="CFO">
                                             <small> 
                                                 More
                                             </small>
