--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -3,9 +3,9 @@
 
             <div class="row">
                 <div id="img-about" class="col pl-0 position-relative text-white text-center align-text-top">
-                    <div class="p-4 position-fixed banner-img-about">
+                    <div class="p-4 position-fixed text-uppercase banner-about">
                         Calendar
-                        <hr class="banner_img_hr position-fixed border border-white mt-2">
+                        <hr class="banner_hr_small position-fixed border mt-2">
                     </div>
                     
                 </div>
@@ -17,11 +17,7 @@
                             November 2019
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col section-calendar text-center p-4">
-                            November 2019
-                        </div>
-                    </div>
+
                 </div>
             </div>
 
