--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -27,16 +27,22 @@ a {
     text-decoration: none;
 }
 
+small {
+
+    font-size: 70%;
+}
+
 ul#menu li {
     display:inline;
-    font-size: 9pt;
+    font-size: 10pt;
     list-style: none;
+    font-family: Galvji;
 }
 
 ul#board li {
     display:inline;
-    font-weight: 675;
-    font-size: 9pt;
+    font-weight: 700;
+    font-size: 11pt;
     list-style: none;
 }
 
@@ -44,6 +50,12 @@ input {
 
     border-radius: 2px !important;
     border-color: #afb0b8;
+}
+
+img {
+
+    border-radius: 3px;
+
 }
 
 ::placeholder {
@@ -55,20 +67,45 @@ input {
 
 #logo {
 
-    height: 35px;
+    height: 56px;
+}
+
+#enter {
+    
+    border-radius: 0px;
+    font-family: Galvji;
+    line-height: 9px;
+    font-weight: 550;
+    opacity: 0.9;
+}
+
+#upload {
+    
+    border-radius: 0px;
+    font-family: Galvji;
+    font-size: 10pt;
+    font-weight: 500;
+}
+
+#contact {
+    
+    border-radius: 0px;
+    font-family: Galvji;
+    font-size: 10pt;
+    font-weight: 500;
 }
 
 #img-home {
-    margin-top: -5%;
+    margin-top: -4px;
     opacity: 1;
     background-image: url("/static/images/home.jpeg");
-    background-size: 190vh;
+    background-size: auto;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: top;
-    height: 120vh;
+    background-position: center center;
+    height: 110vh;
     color: white;
-    font-size: 32px;
+    font-size: 42px;
     transform: scaleY(0.9) translateY(-5%);
 }
 
@@ -82,7 +119,7 @@ input {
     background-position: top;
     height: 120vh;
     color: white;
-    font-size: 32px;
+    font-size: 42px;
     transform: scaleY(0.9) translateY(-5%);
 }
 
@@ -98,6 +135,39 @@ input {
     font-size: 64px;
 }
 
+.dropdown-toggle::after {
+
+    border-top: 0.8em solid !important;
+    border-right: 0.6em solid transparent !important;
+    border-left: 0.6em solid transparent !important;
+    margin-top: 1.3em !important;
+}
+
+.dropdown-menu{
+
+    min-width: 25rem;\
+}
+
+.dropdown-form {
+
+    width: 100%;
+    padding: .25rem 1.5rem;
+    clear: both;
+    font-weight: 400;
+    color: #212529;
+    text-align: inherit;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+}
+
+.form-label {
+
+    font-size: 11pt;
+    font-weight: 300;
+    line-height: 10pt;
+}
+
 .label {
 
     font-size: 10pt;
@@ -106,9 +176,10 @@ input {
     line-height: 10pt;
 }
 
-.container-fluid {
+.container {
 
-    width: 100%;
+    min-width: 100vw;
+    min-height: : 100vh;
 }
 
 .base {
@@ -121,14 +192,20 @@ input {
 .content {
 
     transform: scale(1) !important;
-    min-height: 100vh;
+    height: 100% !important;
     bottom: -250px;
 }
 
 .lift {
 
-    top: -12vh;
-    z-index: 200;
+    top: -10.5vh;
+    z-index: 1000;
+    height:200px;
+}
+
+.base-col {
+
+    top: -10.5vh;
 }
 
 .title {
@@ -142,31 +219,35 @@ input {
 
 .section {
 
-    height: 110px;
-    font-size: 80%;
+    height: 100%;
+    font-size: 14pt;
     font-weight: 700;
+    font-family: Galvji;
 }
 
 .section_hr {
 
-    width: 65px;
+    width: 95px;
     border-color: #d9dfe4;
+    opacity: 0.2;
 
 }
 
 .section-mission {
 
-    height: 150px;
+    height: 100%;
     font-size: 10pt;
     font-weight: 500;
-    line-height: 10pt !important;
+    line-height: 1.3 !important;
+    font-family: Galvji;
 }
 
 .section-calendar-header {
 
     height: 90px;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 600;
+    font-family: Galvji;
 }
 
 .section-calendar {
@@ -181,8 +262,9 @@ input {
 }
 
 .section-contact-header {
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 600;
+    font-family: Galvji;
 }
 
 .section-contact-body {
@@ -201,43 +283,61 @@ input {
     top: -65px;
 }
 
-.banner-img {
+.banner {
 
-    top: 45%;
+    top: 45vh;
     left: 50%;
-    margin-left: -250px;
-    font-family: helvetica;
+    margin-left: -340px;
+    font-family: Geneva;
     transform: scaleY(1.1);
-    width: 500px;
-    line-height: 1.3;
+    width: 700px;
 }
 
-.banner-img-about {
+.banner-title {
 
-    top: 85vh;
-    left: 50%;
-    margin-left: -250px;
-    font-family: helvetica;
-    transform: scaleY(1.1);
-    width: 500px;
-    line-height: 1.3;
+    line-height: 1.3pt;
 }
 
-.banner_img_hr {
+.banner-about {
+
+    top: 80vh;
+    left: 50%;
+    margin-left: -340px;
+    font-family: Geneva;
+    transform: scaleY(1.1);
+    width: 700px;
+    line-height: 1.3;
+    font-weight: 700;
+}
+
+.banner_hr {
 
     left: 50%;
-    margin-left: -70px;
-    font-family: helvetica;
+    margin-left: -105px;
     transform: scaleY(1.1);
-    width: 135px;
+    width: 200px;
     border-width: 2px;
+    border-color: #d9dfe4;
+    opacity: 0.2;
 }
 
-.banner-tagline_img {
+.banner_hr_small {
 
-    font-size: 10pt;
+    left: 50%;
+    margin-left: -93px;
+    transform: scaleY(1.1);
+    width: 185px;
+    border-width: 2px;
+    border-color: #d9dfe4;
+    opacity: 0.2;
+}
+
+.banner-tagline {
+
+    font-size: 12pt;
     font-weight: 500;
-    line-height: 10pt !important;
+    line-height: 9px !important;
+    font-family: Galvji;
 }
 
 .top {
@@ -258,8 +358,10 @@ input {
 
 .footer {
 
-    font-size: 8pt;
-    font-weight: 300;
+    font-size: 10pt;
+    font-weight: 500;
+    font-family: Galvji;
+    z-index: 300;
 }
 
 .modal-content {
@@ -277,7 +379,7 @@ input {
 
 .btn {
 
-    font-family: arial;
+    font-family: Galvji;
 }
 
 .btn-outline-primary {
@@ -298,13 +400,33 @@ input {
 
 .board-member {
 
-    font-family: arial narrow;
+    font-family: Galvji;
+}
+
+.board-member-roll {
+
+    font-weight: 500;
+    font-size: 9pt;
+    font-family: Galvji;
+}
+
+.btn-light {
+
+    color: #535d67;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+}
+
+.btn-light:hover {
+    color: #535d67;
+    background-color: #e2e6ea;
+    border-color: #dae0e5;
 }
     
 
 @media screen and (max-width: 576px) {
 
-    .banner-img-about {
+    .banner-about {
 
         top: 55vh;
     }
@@ -312,13 +434,18 @@ input {
     #img-about {
 
         height: 90vh;
+    }
+    .banner {
+
+        left: 0%;
+        margin-left: 0px;
     } 
 }
     
 
 @media screen and (min-width: 576px) {
 
-    .banner-img-about {
+    .banner-about {
 
         top: 60vh;
     }
@@ -326,12 +453,18 @@ input {
     #img-about {
 
         height: 95vh;
-    }          
+    }  
+
+    .banner {
+
+        left: 0%;
+        margin-left: 0px;
+    }        
 }
 
 @media screen and (min-width: 768px) {
  
-    .banner-img-about {
+    .banner-about {
 
         top: 65vh;
     }
@@ -339,12 +472,18 @@ input {
     #img-about {
 
         height: 100vh;
+    }
+
+    .banner {
+
+        left: 50%;
+        margin-left: -340px;
     }            
 }
 
 @media screen and (min-width: 992px) {
 
-    .banner-img-about {
+    .banner-about {
 
         top: 75vh;
     }
@@ -352,44 +491,47 @@ input {
     #img-about {
 
         height: 110vh;
-    }                
+    }
+                   
 }
 
 @media screen and (min-width: 1200px) {
 
-    .banner-img-about {
+    .banner-about {
 
-        top: 80vh;
+        top: 60vh;
     }
 
     #img-about {
 
-        height: 120vh;
+        height: 110vh;
+        margin-top: -10%;
     }                
 }
 
 @media screen and (min-width: 2560px) {
 
-      .banner-img-about {
+      .banner-about {
 
-        top: 120vh;
+        top: 65vh;
     }
 
     #img-about {
 
-        height: 140vh;
+        height: 110vh;
     }               
 }
 
 @media screen and (min-width: 4096px) {
 
-     .banner-img-about {
+     .banner-about {
 
-        top: 180vh;
+        top: 75vh;
     }
 
     #img-about {
 
-        height: 200vh;
+        height: 110vh;
+
     }              
 }
