--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div id="img-about" class="col pl-0 position-relative text-white text-center align-text-top">
                     <div class="p-4 position-fixed text-uppercase banner-about">
-                        Members
+                        Account
                         <hr class="banner_hr_small position-fixed border mt-2">
                     </div>
                     
@@ -12,7 +12,16 @@
             </div>
             <div class="lift content position-relative row bg-white text-center">
                 <div class="col">
-                    
+                    <div class="row">
+                        <div class="col section-calendar-header text-center p-4">
+                            IMAGE UPLOAD TEST
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div id="uplaods" class="col section-calendar-header text-center p-4">
+                        
+                        </div>
+                    </div>
                 </div>
             </div>
 
