--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -3,9 +3,9 @@
 
             <div class="row">
                 <div id="img-about" class="col pl-0 position-relative text-white text-center align-text-top">
-                    <div class="p-4 position-fixed banner-img-about">
+                    <div class="p-4 position-fixed text-uppercase banner-about">
                         Contact
-                        <hr class="banner_img_hr position-fixed border border-white mt-2">
+                        <hr class="banner_hr_small position-fixed border mt-2">
                     </div>
                     
                 </div>
@@ -77,6 +77,9 @@
                                         <textarea class="form-control" id="inputMessage" rows="3" required></textarea>
                                     </div>
                                 </div>
+                                <button id="contact" type="submit" class="btn btn-secondary float-right my-4 mx-2">
+                                    Submit
+                                </button>
                             </form>    
                         </div>
                         <div class="col-sm-2 col-lg-3">
