--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -20,8 +20,8 @@
                     </div>
                     <div class="row">
                         <div class="col section-mission pt-4">
-                            <p class="mission_p text-justify d-inline-block">
-                                Id eam errem facilisis dissentias, cu vel nisl enim invenire. Fabulas democritum instructior vel ne. Duis voluptaria argumentum no sed, nec clita eruditi consulatu cu. Exerci cotidieque accommodare ea vis, id invenire suscipiantur ius. Ea iriure sensibus nec, pro iusto luptatum sadipscing no, simul clita interesset vix ea.
+                            <p class="mission-p text-justify d-inline-block">
+                                Id eam errem facilisis dissentias, cu vel nisl enim invenire. Fabulas democritum instructior vel ne. Duis voluptaria argumentum no sed, nec clita eruditi consulatu cu. Exerci cotidieque accommodare ea vis, id invenire suscipiantur ius. Ea iriure sensibus nec, pro iusto luptatum sadipscing no, simul clita interesset vix ea. Eu mentitum definitionem sed, ex scripta scriptorem vis. Inani appetere pri cu. Tota admodum liberavisse id pri, pro simul facilisi consulatu ei. Dicunt commodo mediocritatem in nec, usu eu indoctum inciderint.
                             </p>
                         </div>
                     </div>
