--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -41,10 +41,10 @@
                                 </div>
                                 <div class="form-row" id="inputName">
                                     <div class="col p-2">
-                                        <input type="text" class="form-control" placeholder="First name" required>
+                                        <input id="fname" type="text" class="form-control" placeholder="First name" required>
                                     </div>
                                     <div class="col p-2">
-                                        <input type="text" class="form-control" placeholder="Last name" required>
+                                        <input id="lname" type="text" class="form-control" placeholder="Last name" required>
                                     </div>
                                 </div>
                                 <div class="form-row">
@@ -54,7 +54,7 @@
                                 </div>
                                 <div class="form-group form-row">
                                     <div class="col p-2">
-                                        <input type="email" class="form-control" id="inputEmail" placeholder="Email" required>
+                                        <input id="email" type="email" class="form-control" id="inputEmail" placeholder="Email" required>
                                     </div>
                                 </div>
                                 <div class="form-row">
@@ -64,7 +64,7 @@
                                 </div>
                                 <div class="form-row">
                                     <div class="col p-2">
-                                        <input type="text" class="form-control" placeholder="" id="inputSubject">
+                                        <input id="subject" type="text" class="form-control" placeholder="" id="inputSubject">
                                     </div>
                                 </div>
                                 <div class="form-row">
