--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,8 @@
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
             crossorigin="anonymous">
 
+        <link rel="stylesheet" href="/static/css/style.css">   
+
         <script  src="https://code.jquery.com/jquery-3.4.1.js"   
             integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="   
             crossorigin="anonymous"> 
@@ -28,7 +30,8 @@
              crossorigin="anonymous">
         </script>
 
-        <link rel="stylesheet" href="/static/css/style.css">   
+        <script type="text/javascript" src="{{ url_for('static', filename='base.js') }}"></script>
+
  
     </head>
     <body class="bg-dark">
@@ -44,21 +47,21 @@
                             <a class="nav-link dropdown-toggle d-inline" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <form class="dropdown-form d-inline-block" action="/upload-image" method="POST" enctype="multiport/form-data">
+                                <form class="dropdown-form d-inline-block" action="/upload-image/brand-image" method="POST" enctype="multipart/form-data">
                                     <div class="form-group">
                                         <label class="form-label pl-1">
                                             Select&nbsp;Image:
                                         </label>
                                         <div class="custom-file d-block">
-                                            <input type="file" class="custom-file-input" name="image" id="image">
-                                            <label class="custom-file-label label pt-2" for="image">
+                                            <input type="file" class="custom-file-input" name="brand-image" id="brand-image">
+                                            <label class="custom-file-label label pt-2" for="brand-image">
                                                 Image...
                                             </label>
                                         </div>
-                                        <button id="upload" class="btn btn-light mt-2 float-right">
-                                            Uplaod
-                                        </button>
                                     </div>
+                                    <button id="upload" class="btn btn-light mt-2 float-right" type="submit">
+                                            Upload
+                                    </button>
                                 </form>
                             </div>
                         </li>
@@ -100,7 +103,7 @@
                     </ul>
                 </div>
             </div>
-
+            
             {% block content %}
 
             {% endblock %}
