--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-12 pt-3 pb-3 pl-0 pr-4 title position-fixed">
                     <a href="./home" class="pl-0 pl-sm-4 float-left">
-                        <img id="logo" src="/static/images/white_cubps_logo.png" alt="logo">
+                        <img id="logo" src="{{brand}}" alt="logo">
                     </a>
                     {% if current_user.is_authenticated %}
                     <ul class="d-inline p-0">
@@ -67,37 +67,53 @@
                         </li>
                     </ul>
                     {% endif %}
-                    <ul id="menu" class="pl-3 pr-3 mr-0 mt-3 text-white font-weight-bold text-uppercase float-right">
-                        <li class="p-2">
-                            <a href="/about">
-                                About Us
+                    <ul id="menu" class="pl-3 pr-3 mr-0 mt-3  float-right">
+                        {% for k, v in menu.items() %}
+                        <li class="p-2 text-white font-weight-bold text-uppercase">
+                            <a href="{{ v }}">
+                                {{ k }}
                             </a>
                         </li>
-                        <li class="p-2">
-                            <a href="/members">
-                                Members
-                            </a>
-                        </li>
-                        <li class="p-2">
-                            <a href="/calendar">
-                                Calendar
-                            </a>
-                        </li>
-                        <li class="p-2">
-                            <a href="/contact">
-                                Contact
-                            </a>
-                        </li>
+                        {% endfor %}
                         {% if current_user.is_authenticated %}
-                        <li class="p-2">
+                        <li class="p-2 text-white font-weight-bold text-uppercase">
                             <a href="/account">
                                 Account
                             </a>
                         </li>
-                        <li class="p-2">
+                        <li class="p-2 text-white font-weight-bold text-uppercase">
                             <a href="/logout">
                                 Logout
                             </a>
+                        </li>
+                        <li class="nav-item dropdown d-inline">
+                            <a class="nav-link dropdown-toggle d-inline" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <form class="dropdown-form d-inline-block" action="/update-menu" method="POST" enctype="multipart/form-data">
+                                    {% for k, v in menu.items() %}
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col">
+                                                <label class="form-label">
+                                                   {{k}}
+                                                </label>
+                                                <input type="text" class="form-control" placeholder="Name">
+                                            </div>
+                                            <div class="col">
+                                                <label class="form-label">
+                                                    {{v}}
+                                                </label>
+                                                <input type="text" class="form-control" placeholder="Path">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                    <button id="upload" class="btn btn-light mt-2 float-right" type="submit">
+                                            Update
+                                    </button>
+                                </form>
+                            </div>
                         </li>
                         {% endif %}
                     </ul>
@@ -110,23 +126,101 @@
 
             <div class="lift d-block row bg-dark base text-center">
                 <div class="col">
+                    <div class="row base-row position-absolute">
+                        <div class="col base-col">
+                            <img class="up-arrow" src="/static/images/up_arrow.png">
+                        </div>
+                    </div>
+                    <div class="row justify-content-center mr-3">
+                        <div class="col social-media-div">
+                            <a href="#">
+                                <img class="social-media" src="/static/images/facebook.png">
+                                {% if current_user.is_authenticated %}
+                                <div class="nav-item dropdown d-block">
+                                    <a class="nav-link dropdown-toggle social-media-toggle d-block" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <form class="dropdown-form d-inline-block" action="/update-menu" method="POST" enctype="multipart/form-data">
+                                            <div class="form-group">
+                                                <div class="row">
+                                                    <div class="col">
+                                                        <label class="form-label">
+                                                            Facebook:
+                                                        </label>
+                                                        <input type="text" class="form-control" placeholder="http://www.facebook.com/example">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <button id="upload" class="btn btn-light mt-2 float-right" type="submit">
+                                                Update
+                                            </button>
+                                        </form>
+                                    </div>
+                                </div>
+                                {% endif %}
+                            </a>
+                        </div>
+                        <div class="col  social-media-div">
+                            <a href="#">
+                                <img class="social-media" src="/static/images/twitter.png">
+                                {% if current_user.is_authenticated %}
+                                <div class="nav-item dropdown d-block">
+                                    <a class="nav-link dropdown-toggle social-media-toggle d-block" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <form class="dropdown-form d-inline-block" action="/update-menu" method="POST" enctype="multipart/form-data">
+                                            <div class="form-group">
+                                                <div class="row">
+                                                    <div class="col">
+                                                        <label class="form-label">
+                                                            Twitter:
+                                                        </label>
+                                                        <input type="text" class="form-control" placeholder="http://www.twitter.com/example">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <button id="upload" class="btn btn-light mt-2 float-right" type="submit">
+                                                Update
+                                            </button>
+                                        </form>
+                                    </div>
+                                </div>
+                                {% endif %}
+                            </a>
+                        </div>
+                        <div class="col social-media-div">
+                            <a href="#">
+                                <img class="social-media" src="/static/images/instagram.png">
+                                {% if current_user.is_authenticated %}
+                                <div class="nav-item dropdown d-block">
+                                    <a class="nav-link dropdown-toggle social-media-toggle d-block" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <form class="dropdown-form d-inline-block" action="/update-menu" method="POST" enctype="multipart/form-data">
+                                            <div class="form-group">
+                                                <div class="row">
+                                                    <div class="col">
+                                                        <label class="form-label">
+                                                            Instagram:
+                                                        </label>
+                                                        <input type="text" class="form-control" placeholder="http://www.instagram.com/example">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <button id="upload" class="btn btn-light mt-2 float-right" type="submit">
+                                                Update
+                                            </button>
+                                        </form>
+                                    </div>
+                                </div>
+                                {% endif %}
+                            </a>
+                        </div>
+                    </div>
                     <div class='row'>
-                        <div class="col base-col d-block">
-                            <img class="up-arrow mb-5" src="/static/images/up_arrow.png">
-                            <br>
-                            <a class="d-inline" href="#">
-                                <img class="social-media my-2" src="/static/images/facebook.png">
-                            </a>
-                            <a class="d-inline" href="#">
-                                <img class="social-media my-2" src="/static/images/twitter.png">
-                            </a>
-                            <a class="d-inline" href="#">
-                                <img class="social-media my-2" src="/static/images/instagram.png">
-                            </a>
-                            <div class="footer mt-5 text-center text-secondary">
+                        <div class="col footer mt-5 text-center text-secondary">
                                 &copy; Almynak 2019. All Rights Reserved.
-                            </div>
-                        </di>
+                        </div>
                     </div>
                 </div>
             </div>
